change to hamat alkhalij

--- a/Bestoption.html
+++ b/Bestoption.html
@@ -39,7 +39,7 @@
             <div class="preloader-after"></div>
             <div class="preloader-before"></div>
             <div class="preloader-block">
-                <div class="title">Ad Block</div>
+                <div class="title">hamatalkhalij</div>
                 <div class="percent">0</div>
                 <div class="loading">loading...</div>
             </div>
@@ -132,7 +132,7 @@
                         <div class="bg" id="dsn-hero-parallax-img"
                             data-dsn-ajax="img">
                             <div class="bg-image feature-img cover-bg"
-                                style="background-image: url('assets/img/project/project3/1.jpg');"
+                                style="background-image: url('assets/img/slide.jpg');"
                                 data-overlay="3"></div>
                         </div>
 
@@ -145,7 +145,8 @@
 
                                 <span class="title-text-header-inner">
                                     <span data-dsn-animate="ajax"
-                                        class="feature-title">Light Weight</span>
+                                        class="feature-title">Revolutionary
+                                        Speed & Efficiency</span>
                                 </span>
                             </div>
                         </div>
@@ -160,25 +161,73 @@
                                     data-dsn-grid="move-section"
                                     data-dsn-opacity="0.1"
                                     data-dsn-duration="170%" data-dsn-move="0%"
-                                    class="feature-title">Light Weight
+                                    class="feature-title">Speed & Efficiency
                                 </div>
                                 <div class="inner">
                                     <h2 data-dsn-animate="text"
-                                        class="feature-title">Light Weight</h2>
+                                        class="feature-title">Discover Your Best
+                                        Option: The Most Advanced Green Building
+                                        System in Saudi Arabia and Beyond!</h2>
                                     <p data-dsn-animate="up"
-                                        class="feature-desc">AD-Block is
-                                        featured by its light weight and
-                                        durability compared to all the available
-                                        building systems, because the weight of
-                                        a square meter is approximately equal to
-                                        the weight of a square meter of plaster
-                                        on both sides, which makes it the ideal
-                                        building system. </p>
+                                        class="feature-desc">At Hamat Al Kahlij,
+                                        we take immense pride in presenting
+                                        "AD-Blocks," the epitome of innovation,
+                                        sustainability, and cost-effectiveness
+                                        in the construction industry. With a
+                                        vision aligned to Saudi Arabia's 2030
+                                        vision for a transformative future,
+                                        AD-Blocks have emerged as the most
+                                        advanced green building system, not only
+                                        within the Kingdom but on the global
+                                        stage.</p>
+                                    <h6 data-dsn-animate="text"
+                                        class="feature-title mt-4">Unparalleled
+                                        Strength & Durability</h6>
+                                    <p data-dsn-animate="up"
+                                        class="feature-desc">AD-Blocks boast
+                                        exceptional strength and durability,
+                                        ensuring the construction of robust and
+                                        long-lasting buildings that can
+                                        withstand the test of time and
+                                        environmental challenges. These blocks
+                                        have undergone rigorous testing to
+                                        surpass industry standards, offering
+                                        unparalleled performance and peace of
+                                        mind to builders and occupants alike.</p>
+                                    <h6 data-dsn-animate="text"
+                                        class="feature-title mt-4">Cost-Effective
+                                        & Accessible</h6>
+                                    <p data-dsn-animate="up"
+                                        class="feature-desc">As the pioneering
+                                        sponsor and manufacturer of AD-Blocks in
+                                        Saudi Arabia, Hamat Al Kahlij is a
+                                        catalyst for transformative growth in
+                                        the construction sector. By introducing
+                                        these groundbreaking building materials,
+                                        the company empowers builders to
+                                        construct sustainable, energy-efficient,
+                                        and visually stunning structures that
+                                        align with Saudi Arabia's vision for a
+                                        prosperous future.
+
+                                        Join us on the journey toward
+                                        sustainable construction excellence and
+                                        experience the unparalleled benefits of
+                                        AD-Blocks – the most advanced green
+                                        building system in Saudi Arabia and
+                                        beyond. Embrace a future where
+                                        innovation, efficiency, and
+                                        environmental responsibility converge in
+                                        perfect harmony, powered by Hamat Al
+                                        Kahlij's relentless pursuit of
+                                        excellence.</p>
+
                                 </div>
                             </div>
                         </div>
 
                     </div>
+
                     <footer class="footer">
                         <div class="container">
                             <div class="footer-links p-relative">
