--- a/Environment.html
+++ b/Environment.html
@@ -39,7 +39,7 @@
             <div class="preloader-after"></div>
             <div class="preloader-before"></div>
             <div class="preloader-block">
-                <div class="title">Ad Block</div>
+                <div class="title">hamatalkhalij</div>
                 <div class="percent">0</div>
                 <div class="loading">loading...</div>
             </div>
@@ -132,7 +132,7 @@
                         <div class="bg" id="dsn-hero-parallax-img"
                             data-dsn-ajax="img">
                             <div class="bg-image feature-img cover-bg"
-                                style="background-image: url('assets/img/project/project3/1.jpg');"
+                                style="background-image: url('assets/img/project/project4/13.jpg');"
                                 data-overlay="3"></div>
                         </div>
 
@@ -145,7 +145,8 @@
 
                                 <span class="title-text-header-inner">
                                     <span data-dsn-animate="ajax"
-                                        class="feature-title">Light Weight</span>
+                                        class="feature-title">Environment
+                                        Friendly</span>
                                 </span>
                             </div>
                         </div>
@@ -160,25 +161,83 @@
                                     data-dsn-grid="move-section"
                                     data-dsn-opacity="0.1"
                                     data-dsn-duration="170%" data-dsn-move="0%"
-                                    class="feature-title">Light Weight
+                                    class="feature-title">Environment
                                 </div>
                                 <div class="inner">
                                     <h2 data-dsn-animate="text"
-                                        class="feature-title">Light Weight</h2>
+                                        class="feature-title">Embrace
+                                        Environment-Friendly Solutions:
+                                        AD-Blocks Leading the Charge!</h2>
                                     <p data-dsn-animate="up"
-                                        class="feature-desc">AD-Block is
-                                        featured by its light weight and
-                                        durability compared to all the available
-                                        building systems, because the weight of
-                                        a square meter is approximately equal to
-                                        the weight of a square meter of plaster
-                                        on both sides, which makes it the ideal
-                                        building system. </p>
+                                        class="feature-desc">In the pursuit of
+                                        Saudi Arabia's Vision for a Clean
+                                        Environment, Hamat Al Kahlij takes pride
+                                        in being a significant part of this
+                                        transformative journey. Our commitment
+                                        to sustainability and eco-friendliness
+                                        aligns perfectly with the nation's
+                                        ambitious goals for a greener future.
+
+                                        At Hamat Al Kahlij, we understand the
+                                        vital role that the construction
+                                        industry plays in shaping the
+                                        environment. As advocates of responsible
+                                        building practices, we have embraced
+                                        AD-Blocks as a testament to our
+                                        dedication to environmental stewardship.
+                                        AD-Blocks stand as a symbol of
+                                        innovation and eco-consciousness,
+                                        redefining the way buildings are
+                                        constructed and contributing to a
+                                        cleaner, greener future for Saudi Arabia
+                                        and beyond.
+
+                                        With a profound awareness of the impact
+                                        construction can have on our planet, we
+                                        have revolutionized our manufacturing
+                                        processes to be low-emission and
+                                        energy-efficient. By utilizing
+                                        eco-friendly materials and methods,
+                                        AD-Blocks have become a leading choice
+                                        for builders and developers who share
+                                        our vision for a more sustainable
+                                        tomorrow.
+
+                                        As we move forward, hand in hand with
+                                        Saudi Arabia's ambitious Vision for a
+                                        Clean Environment, we envision AD-Blocks
+                                        becoming a driving force in reducing the
+                                        construction industry's environmental
+                                        footprint. By promoting energy-efficient
+                                        buildings and supporting a reduction in
+                                        harmful emissions, we are actively
+                                        contributing to the realization of a
+                                        cleaner, healthier, and more sustainable
+                                        environment for all.
+
+                                        Together, let us embrace this shared
+                                        responsibility and be a positive force
+                                        for change. With Hamat Al Kahlij and
+                                        AD-Blocks, the journey towards a cleaner
+                                        environment becomes not only achievable
+                                        but also rewarding. Join us in building
+                                        a future that harmonizes with nature,
+                                        protecting our resources, and preserving
+                                        the beauty of Saudi Arabia for
+                                        generations to come.</p>
+
+                                    <div class="flex mt-4">
+                                        <img src="assets//img/2030.png"
+                                            class="sa-img" />
+                                        <img src="assets//img/madeinsa.png"
+                                            class="sa-img" />
+                                    </div>
                                 </div>
                             </div>
                         </div>
 
                     </div>
+
                     <footer class="footer">
                         <div class="container">
                             <div class="footer-links p-relative">
