--- a/Healthy.html
+++ b/Healthy.html
@@ -39,7 +39,7 @@
             <div class="preloader-after"></div>
             <div class="preloader-before"></div>
             <div class="preloader-block">
-                <div class="title">Ad Block</div>
+                <div class="title">hamatalkhalij</div>
                 <div class="percent">0</div>
                 <div class="loading">loading...</div>
             </div>
@@ -132,7 +132,7 @@
                         <div class="bg" id="dsn-hero-parallax-img"
                             data-dsn-ajax="img">
                             <div class="bg-image feature-img cover-bg"
-                                style="background-image: url('assets/img/project/project3/1.jpg');"
+                                style="background-image: url('assets/img/project/project9/6.jpg');"
                                 data-overlay="3"></div>
                         </div>
 
@@ -145,7 +145,7 @@
 
                                 <span class="title-text-header-inner">
                                     <span data-dsn-animate="ajax"
-                                        class="feature-title">Light Weight</span>
+                                        class="feature-title">Simply Healthy</span>
                                 </span>
                             </div>
                         </div>
@@ -160,25 +160,60 @@
                                     data-dsn-grid="move-section"
                                     data-dsn-opacity="0.1"
                                     data-dsn-duration="170%" data-dsn-move="0%"
-                                    class="feature-title">Light Weight
+                                    class="feature-title">Speed & Efficiency
                                 </div>
                                 <div class="inner">
                                     <h2 data-dsn-animate="text"
-                                        class="feature-title">Light Weight</h2>
+                                        class="feature-title"> Embrace
+                                        AD-Blocks for Enhanced Indoor Air
+                                        Quality and Well-being!</h2>
                                     <p data-dsn-animate="up"
-                                        class="feature-desc">AD-Block is
-                                        featured by its light weight and
-                                        durability compared to all the available
-                                        building systems, because the weight of
-                                        a square meter is approximately equal to
-                                        the weight of a square meter of plaster
-                                        on both sides, which makes it the ideal
-                                        building system. </p>
+                                        class="feature-desc">The significance of
+                                        indoor air quality in buildings has
+                                        become a paramount global concern, with
+                                        growing attention to its impact on human
+                                        health. At Hamat Al Kahlij, we recognize
+                                        the importance of creating spaces that
+                                        prioritize the well-being of occupants.
+                                        Introducing AD-Blocks, the revolutionary
+                                        building system that lets you breathe
+                                        easy, ensuring a breath of fresh air for
+                                        everyone within.</p>
+                                    <h6 data-dsn-animate="text"
+                                        class="feature-title mt-4">A Breath of
+                                        Fresh Air</h6>
+                                    <p data-dsn-animate="up"
+                                        class="feature-desc">Unlike conventional
+                                        construction materials that may pose
+                                        health risks, AD-Blocks are engineered
+                                        with meticulous care to minimize
+                                        potential health hazards caused by poor
+                                        indoor air quality. With AD-Blocks, you
+                                        can bid farewell to concerns about
+                                        diseases linked to harmful construction
+                                        materials, as they are designed to
+                                        promote a cleaner and healthier indoor
+                                        environment..</p>
+                                    <h6 data-dsn-animate="text"
+                                        class="feature-title mt-4">Elevating
+                                        Well-being and Comfort</h6>
+                                    <p data-dsn-animate="up"
+                                        class="feature-desc">Hamat Al Kahlij
+                                        believes that every building should be a
+                                        sanctuary of comfort and well-being.
+                                        AD-Blocks play a crucial role in
+                                        elevating the indoor environment,
+                                        creating spaces where occupants can
+                                        thrive, free from the worries of
+                                        respiratory issues and discomfort caused
+                                        by poor air quality.</p>
+
                                 </div>
                             </div>
                         </div>
 
                     </div>
+
                     <footer class="footer">
                         <div class="container">
                             <div class="footer-links p-relative">
