--- a/Solution.html
+++ b/Solution.html
@@ -39,7 +39,7 @@
             <div class="preloader-after"></div>
             <div class="preloader-before"></div>
             <div class="preloader-block">
-                <div class="title">Ad Block</div>
+                <div class="title">hamatalkhalij</div>
                 <div class="percent">0</div>
                 <div class="loading">loading...</div>
             </div>
@@ -132,7 +132,7 @@
                         <div class="bg" id="dsn-hero-parallax-img"
                             data-dsn-ajax="img">
                             <div class="bg-image feature-img cover-bg"
-                                style="background-image: url('assets/img/project/project3/1.jpg');"
+                                style="background-image: url('assets/img/project/project2/3.jpeg');"
                                 data-overlay="3"></div>
                         </div>
 
@@ -145,7 +145,8 @@
 
                                 <span class="title-text-header-inner">
                                     <span data-dsn-animate="ajax"
-                                        class="feature-title">Light Weight</span>
+                                        class="feature-title">The Evolution of
+                                        "AD-Block"</span>
                                 </span>
                             </div>
                         </div>
@@ -160,25 +161,79 @@
                                     data-dsn-grid="move-section"
                                     data-dsn-opacity="0.1"
                                     data-dsn-duration="170%" data-dsn-move="0%"
-                                    class="feature-title">Light Weight
+                                    class="feature-title">Speed & Efficiency
                                 </div>
                                 <div class="inner">
                                     <h2 data-dsn-animate="text"
-                                        class="feature-title">Light Weight</h2>
+                                        class="feature-title">Discover Your Best
+                                        Option: The Most Advanced Green Building
+                                        System in Saudi Arabia and Beyond!</h2>
                                     <p data-dsn-animate="up"
-                                        class="feature-desc">AD-Block is
-                                        featured by its light weight and
-                                        durability compared to all the available
-                                        building systems, because the weight of
-                                        a square meter is approximately equal to
-                                        the weight of a square meter of plaster
-                                        on both sides, which makes it the ideal
-                                        building system. </p>
+                                        class="feature-desc">The journey to
+                                        revolutionize the construction industry
+                                        with "AD-Blocks" began with a
+                                        fundamental shift in our mindset.
+                                        Recognizing the importance of enhancing
+                                        this innovative building solution, we
+                                        took the first step by adding
+                                        "Processed" to the name - a pivotal
+                                        change that unlocked remarkable
+                                        improvements.
+                                        With utmost dedication, we embarked on a
+                                        transformative process to make gypsum
+                                        better, achieving unparalleled
+                                        advancements in crucial aspects:</p>
+                                    <h6 data-dsn-animate="text"
+                                        class="feature-title mt-4">1. Fire
+                                        Resistance</h6>
+                                    <p data-dsn-animate="up"
+                                        class="feature-desc">Safety is paramount
+                                        in construction, and we spared no effort
+                                        in elevating AD-Blocks to new heights of
+                                        fire resistance. Our processed gypsum
+                                        formulation equips buildings with
+                                        enhanced fire protection, mitigating
+                                        risks and ensuring greater peace of mind
+                                        for occupants.</p>
+                                    <h6 data-dsn-animate="text"
+                                        class="feature-title mt-4">2. Noise
+                                        Cancellation: </h6>
+                                    <p data-dsn-animate="up"
+                                        class="feature-desc">Building
+                                        environments deserve tranquility, free
+                                        from the distractions of external noise.
+                                        Through meticulous processing, AD-Blocks
+                                        boast exceptional noise cancellation
+                                        properties, fostering serene spaces that
+                                        promote productivity and well-being.</p>
+                                    <h6 data-dsn-animate="text"
+                                        class="feature-title mt-4">3. Enhanced
+                                        Water Resistance</h6>
+                                    <p data-dsn-animate="up"
+                                        class="feature-desc">Water can pose
+                                        significant challenges to traditional
+                                        construction materials, leading to
+                                        structural degradation and compromising
+                                        durability. Through innovative
+                                        processing techniques, AD-Blocks achieve
+                                        enhanced water resistance, safeguarding
+                                        buildings against moisture-related
+                                        issues.
+
+                                        The transformative power of
+                                        "Processed Gypsum" has catapulted
+                                        AD-Blocks to the forefront of the
+                                        industry. As we continue to embrace
+                                        cutting-edge technology and sustainable
+                                        practices, our commitment to pushing
+                                        boundaries knows no bounds..</p>
+
                                 </div>
                             </div>
                         </div>
 
                     </div>
+
                     <footer class="footer">
                         <div class="container">
                             <div class="footer-links p-relative">
